# STTAnalytics

./: .gitignore  CMakeLists.txt  main.cpp
include/: BinaryPhotonReader.h  EnergyAggregator.h  ParametersFileReader.h  Photon.h  PhotonProcessor.h  SurfaceMap.h  comparefilename.h  tonatiuhreader.h
src/: EnergyAggregator.cpp  ParametersFileReader.cpp  Photon.cpp  PhotonProcessor.cpp  SurfaceMap.cpp  comparefilename.cpp  tonatiuhreader.cpp
